# libnanobuf

./: .gitignore  CMakeLists.txt  README.md  buf_reader.c  buf_reader.h  buf_writer.c  buf_writer.h  nanobuf.c  nanobuf.h  nanobuf_defs.h
tests/: CMakeLists.txt  read.c  test_read_basic.c  test_read_boundary_str.c  test_read_cstr.c  test_read_empty_str.c  test_read_medium_str.c  test_read_primitives.c  test_read_short_str.c  test_read_utf8_str.c  test_utils.h  test_write.c  test_write_primitives.c  test_write_primitives_malloc.c  write.c
