# Add test executables
add_executable(test_read_basic test_read_basic.c)
add_executable(test_read_boundary_str test_read_boundary_str.c)
add_executable(test_read_empty_str test_read_empty_str.c)
add_executable(test_read_medium_str test_read_medium_str.c)
add_executable(test_read_short_str test_read_short_str.c)
add_executable(test_read_utf8_str test_read_utf8_str.c)
add_executable(test_write test_write.c)

# Link the test executables with the nanobuf library (static or shared)
target_link_libraries(test_read_basic nanobuf)
target_link_libraries(test_read_boundary_str nanobuf)
target_link_libraries(test_read_empty_str nanobuf)
target_link_libraries(test_read_medium_str nanobuf)
target_link_libraries(test_read_short_str nanobuf)
target_link_libraries(test_read_utf8_str nanobuf)
target_link_libraries(test_write nanobuf)

# Add tests to CTest
add_test(NAME test_read_basic COMMAND test_read_basic)
add_test(NAME test_read_boundary_str COMMAND test_read_boundary_str)
add_test(NAME test_read_empty_str COMMAND test_read_empty_str)
add_test(NAME test_read_medium_str COMMAND test_read_medium_str)
add_test(NAME test_read_short_str COMMAND test_read_short_str)
add_test(NAME test_read_utf8_str COMMAND test_read_utf8_str)
add_test(NAME test_write COMMAND test_write)
